tests/paczka1/fuzzy1/88508951.err
Error in line 7: fet68 S366 44,2
Error in line 11: 8zc0mAsX6 S953 3,3
